--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     </div>
                 </div>
                 <div class="hidden lg:block floating">
-                    <img src="images/about.jpg" alt="Enterprise Network" class="rounded-2xl shadow-2xl shadow-black/30 border border-white/10">
+                    <img src="images/hero.jpg" alt="Enterprise Network" class="rounded-2xl shadow-2xl shadow-black/30 border border-white/10">
                 </div>
             </div>
         </div>
